# TaikoArcadeLoader

./: .clang-format  .gitignore  .gitmodules  Makefile  PLUGINS.md  README.md  cross-mingw-64.txt  meson.build
.github/workflows/: build.yml
patches/8.18/: Makefile  dllmain.c
patches/amauth/: Makefile  dllmain.cpp
patches/what_the_fuck/: Makefile  dllmain.cpp
plugins/8.18/: Makefile  dllmain.c  song_limits.s
plugins/8.18-song-limit/: Cargo.toml
plugins/8.18-song-limit/src/: lib.rs
plugins/amauth/: Makefile  dllmain.cpp
src/: bnusio.cpp  bnusio.h  boilerplate.c  boilerplate.h  card.cpp  card.h  constants.h  dllmain.c  dllmain.cpp  helpers.c  helpers.cpp  helpers.h  keyconfig.cpp  keyconfig.h  poll.c  poll.cpp  poll.h
src/patches/: amauth.cpp  cn_jun_2023.cpp  jp_nov_2020.cpp  patches.h  qr.cpp
subprojects/: minhook.wrap  tomlc99.wrap
subprojects/packagefiles/: minhook.patch  tomlc99.patch
